# python-validator

./: .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  README.md  codecov.yml  pyproject.toml  ruff.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: build-test-deploy.yml  checks.yml  codespell.yml  prerelease.yml  python_tests.yml
matlab_wrapper/: bids_validate_file.m
src/bids_validator/: __init__.py  __main__.py  _version.py  bids_validator.py  bidsignore.py  context.py  context_generator.py  expression_language.py  test_bids_validator.py
src/bids_validator/types/: __init__.py  _context.py  _typings.py  context.py  files.py
tests/: __init__.py  conftest.py  test_bidsignore.py  test_context.py  test_derivatives.py
tests/types/: __init__.py  test_context.py  test_files.py
tools/: make_gitignore
